--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "streamweb2",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Exemple d'un site web pour streameur twicth",
+  "homepage": "https://github.com/TheveninKillian/streamweb-2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
